--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.4.7",
     "express-basic-auth": "^1.2.1",
     "joi": "^17.13.3",
     "moment": "^2.30.1",
