--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "generate-module": "node scripts/generateModule.js"
   },
   "dependencies": {
+    "@keyv/redis": "^4.3.1",
     "@nestjs-modules/mailer": "^2.0.2",
+    "@nestjs/cache-manager": "^3.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
@@ -35,12 +37,19 @@
     "@nestjs/websockets": "^10.4.8",
     "@types/multer": "^1.4.12",
     "bcrypt": "^5.1.1",
+    "cache-manager": "^6.4.1",
+    "cache-manager-ioredis": "^2.1.0",
+    "cache-manager-ioredis-yet": "^2.1.2",
+    "cache-manager-redis-store": "^3.0.1",
+    "cacheable": "^1.8.9",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
     "express-basic-auth": "^1.2.1",
+    "ioredis": "^5.6.0",
     "joi": "^17.13.3",
+    "keyv": "^5.3.1",
     "moment": "^2.30.1",
     "mongoose": "^8.7.0",
     "nodemailer": "^6.9.15",
